--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
     "description": "Toy example of microservice",
     "main": "",
     "scripts": {
-        "start": "run-p start-frontend start-controller start-shipping start-inventory",
+        "start": "run-p start-frontend start-controller start-inventory",
         "start-controller": "nodemon services/controller/index.js",
-        "start-shipping": "nodemon services/shipping/index.js",
         "start-inventory": "nodemon services/inventory/index.js",
         "start-frontend": "serve services/frontend"
     },
@@ -25,6 +24,7 @@
         "@grpc/proto-loader": "^0.5.6",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "file-saver": "^2.0.5",
         "google-protobuf": "^3.15.0-rc.1",
         "grpc": "^1.24.4",
         "serve": "^11.3.2"
