--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/rodrigo-brito/shop-microservice.git"
+        "url": "git+https://github.com/FelipePereiraAlves/code-micro-videos"
     },
     "author": "Rodrigo",
     "license": "MIT",
